test/packetdrill/parser.output
State 168 conflicts: 1 shift/reduce
State 203 conflicts: 1 shift/reduce
State 218 conflicts: 1 shift/reduce


Grammar

    0 $accept: script $end

    1 script: opt_options opt_init_command events opt_cleanup_command

    2 opt_options: %empty
    3            | options

    4 options: option
    5        | options option

    6 option: option_flag '=' option_value
    7       | option_flag

    8 option_flag: OPTION

    9 option_value: INTEGER
   10             | WORD
   11             | STRING
   12             | IPV4_ADDR
   13             | IPV6_ADDR
   14             | IPV4
   15             | IPV6
   16             | WORD '=' WORD
   17             | WORD '=' STRING
   18             | WORD '=' BACK_QUOTED

   19 opt_init_command: %empty
   20                 | init_command

   21 init_command: command_spec

   22 events: event
   23       | events event

   24 event: event_time action

   25 event_time: '+' time
   26           | time
   27           | '*'
   28           | time '~' time
   29           | '+' time '~' '+' time

   30 time: FLOAT
   31     | INTEGER

   32 action: packet_spec
   33       | syscall_spec
   34       | command_spec
   35       | code_spec

   36 packet_spec: tcp_packet_spec
   37            | udp_packet_spec
   38            | icmp_packet_spec

   39 tcp_packet_spec: packet_prefix opt_ip_info opt_port_info flags seq opt_ack opt_window opt_urg_ptr opt_tcp_options

   40 udp_packet_spec: packet_prefix opt_ip_info UDP opt_port_info '(' INTEGER ')'

   41 icmp_packet_spec: packet_prefix opt_ip_info ICMP icmp_type opt_icmp_code opt_icmp_mtu opt_icmp_echo_id opt_icmp_echoed

   42 packet_prefix: direction
   43              | packet_prefix IPV4 opt_ip_info IPV4_ADDR '>' IPV4_ADDR ':'
   44              | packet_prefix IPV6 opt_ip_info IPV6_ADDR '>' IPV6_ADDR ':'
   45              | packet_prefix GRE ':'
   46              | packet_prefix GRE opt_comma gre_header_expression ':'
   47              | packet_prefix MPLS mpls_stack ':'

   48 gre_header_expression: gre_flags_list opt_comma gre_sum opt_comma gre_off opt_comma gre_key opt_comma gre_seq

   49 gre_flags_list: FLAGS '[' gre_flags ']'
   50               | FLAGS any_int

   51 gre_flags: gre_flag
   52          | gre_flag ',' gre_flags

   53 gre_flag: NONE
   54         | CHECKSUM PRESENT
   55         | KEY PRESENT
   56         | SEQUENCE PRESENT

   57 gre_sum: SUM any_int

   58 gre_off: OFF any_int

   59 gre_key: KEY opt_equals any_int

   60 gre_seq: SEQ any_int

   61 opt_comma: %empty
   62          | ','

   63 opt_equals: %empty
   64           | '='

   65 mpls_stack: %empty
   66           | mpls_stack mpls_stack_entry

   67 mpls_stack_entry: '(' LABEL INTEGER ',' TC INTEGER ',' opt_mpls_stack_bottom TTL INTEGER ')'

   68 opt_mpls_stack_bottom: %empty
   69                      | '[' WORD ']' ','

   70 icmp_type: WORD

   71 opt_icmp_code: %empty
   72              | WORD

   73 opt_icmp_echoed: %empty
   74                | '[' UDP '(' INTEGER ')' ']'
   75                | '[' seq ']'
   76                | '[' RAW '(' INTEGER ')' ']'

   77 opt_icmp_mtu: %empty
   78             | MTU INTEGER

   79 opt_icmp_echo_id: %empty
   80                 | ID INTEGER

   81 opt_port_info: %empty
   82              | INTEGER '>' INTEGER

   83 direction: '<'
   84          | '>'

   85 tos_spec: ip_ecn
   86         | TOS HEX_INTEGER

   87 ip_ecn: NO_ECN
   88       | ECT0
   89       | ECT1
   90       | ECT01
   91       | CE

   92 flags: WORD
   93      | '.'
   94      | WORD '.'
   95      | '-'

   96 flow_label: FLOWLABEL HEX_INTEGER

   97 ip_info: tos_spec
   98        | flow_label
   99        | TTL INTEGER
  100        | tos_spec ',' flow_label

  101 opt_ip_info: %empty
  102            | '(' ip_info ')'
  103            | '[' ip_info ']'

  104 seq: INTEGER ':' INTEGER '(' INTEGER ')'

  105 opt_ack: %empty
  106        | ACK INTEGER

  107 opt_window: %empty
  108           | WIN INTEGER

  109 opt_urg_ptr: %empty
  110            | URG INTEGER

  111 opt_tcp_options: %empty
  112                | '<' tcp_option_list '>'
  113                | '<' ELLIPSIS '>'

  114 tcp_option_list: tcp_option
  115                | tcp_option_list ',' tcp_option

  116 opt_tcp_fast_open_cookie: %empty
  117                         | hex_blob

  118 hex_blob: WORD
  119         | INTEGER

  120 tcp_option: NOP
  121           | EOL
  122           | MSS INTEGER
  123           | WSCALE INTEGER
  124           | SACKOK
  125           | SACK sack_block_list
  126           | MD5 hex_blob
  127           | TIMESTAMP VAL INTEGER ECR INTEGER
  128           | FAST_OPEN opt_tcp_fast_open_cookie
  129           | FAST_OPEN_EXP opt_tcp_fast_open_cookie

  130 sack_block_list: sack_block
  131                | sack_block_list sack_block

  132 sack_block: INTEGER ':' INTEGER

  133 syscall_spec: opt_end_time function_name function_arguments '=' expression opt_errno opt_note

  134 opt_end_time: %empty
  135             | ELLIPSIS time

  136 function_name: WORD

  137 function_arguments: '(' ')'
  138                   | '(' expression_list ')'

  139 expression_list: expression
  140                | expression_list ',' expression

  141 expression: ELLIPSIS
  142           | any_int
  143           | WORD
  144           | STRING
  145           | STRING ELLIPSIS
  146           | binary_expression
  147           | array
  148           | inaddr
  149           | in6addr
  150           | sockaddr
  151           | msghdr
  152           | iovec
  153           | pollfd
  154           | linger
  155           | mpls_stack_expression
  156           | cmsg_expr
  157           | scm_timestamping_expr
  158           | sub_expr_list
  159           | sock_extended_err_expr
  160           | '{' gre_header_expression '}'
  161           | epollev

  162 any_int: decimal_integer
  163        | hex_integer

  164 decimal_integer: INTEGER

  165 hex_integer: HEX_INTEGER

  166 binary_expression: expression '|' expression
  167                  | WORD '=' expression

  168 array: '[' ']'
  169      | '[' expression_list ']'

  170 inaddr: INET_ADDR '(' STRING ')'

  171 in6addr: INET6_ADDR '(' STRING ')'

  172 sockaddr: '{' SA_FAMILY '=' WORD ',' SIN_PORT '=' _HTONS_ '(' INTEGER ')' ',' SIN_ADDR '=' INET_ADDR '(' STRING ')' '}'

  173 msghdr: '{' MSG_NAME '(' ELLIPSIS ')' '=' ELLIPSIS ',' MSG_IOV '(' decimal_integer ')' '=' array ',' MSG_FLAGS '=' expression opt_cmsg '}'

  174 opt_cmsg: %empty
  175         | ',' MSG_CONTROL '=' array

  176 cmsg_expr: '{' CMSG_LEVEL '=' expression ',' CMSG_TYPE '=' expression ',' CMSG_DATA '=' expression '}'

  177 scm_timestamping_expr: '{' SCM_SEC '=' INTEGER ',' SCM_NSEC '=' INTEGER '}'

  178 sub_expr_list: '{' expression_list '}'

  179 sock_extended_err_expr: '{' EE_ERRNO '=' expression ',' EE_ORIGIN '=' expression ',' EE_TYPE '=' expression ',' EE_CODE '=' expression ',' EE_INFO '=' expression ',' EE_DATA '=' expression '}'

  180 iovec: '{' ELLIPSIS ',' decimal_integer '}'

  181 pollfd: '{' FD '=' expression ',' EVENTS '=' expression opt_revents '}'

  182 epollev: '{' EVENTS '=' expression ',' FD '=' expression '}'
  183        | '{' EVENTS '=' expression ',' PTR '=' expression '}'
  184        | '{' EVENTS '=' expression ',' U32 '=' expression '}'
  185        | '{' EVENTS '=' expression ',' U64 '=' expression '}'

  186 opt_revents: %empty
  187            | ',' REVENTS '=' expression

  188 linger: '{' ONOFF '=' INTEGER ',' LINGER '=' INTEGER '}'

  189 mpls_stack_expression: '{' mpls_stack '}'

  190 opt_errno: %empty
  191          | WORD note

  192 opt_note: %empty
  193         | note

  194 note: '(' word_list ')'

  195 word_list: WORD
  196          | FLAGS
  197          | word_list WORD

  198 command_spec: BACK_QUOTED

  199 code_spec: CODE

  200 opt_cleanup_command: %empty
  201                    | cleanup_command

  202 cleanup_command: command_spec


Terminals, with rules where they appear

$end (0) 0
'(' (40) 40 67 74 76 102 104 137 138 170 171 172 173 194
')' (41) 40 67 74 76 102 104 137 138 170 171 172 173 194
'*' (42) 27
'+' (43) 25 29
',' (44) 52 62 67 69 100 115 140 172 173 175 176 177 179 180 181 182
    183 184 185 187 188
'-' (45) 95
'.' (46) 93 94
':' (58) 43 44 45 46 47 104 132
'<' (60) 83 112 113
'=' (61) 6 16 17 18 64 133 167 172 173 175 176 177 179 181 182 183
    184 185 187 188
'>' (62) 43 44 82 84 112 113
'[' (91) 49 69 74 75 76 103 168 169
']' (93) 49 69 74 75 76 103 168 169
'{' (123) 160 172 173 176 177 178 179 180 181 182 183 184 185 188 189
'|' (124) 166
'}' (125) 160 172 173 176 177 178 179 180 181 182 183 184 185 188 189
'~' (126) 28 29
error (256)
ELLIPSIS (258) 113 135 141 145 173 180
SA_FAMILY (259) 172
SIN_PORT (260) 172
SIN_ADDR (261) 172
_HTONS_ (262) 172
INET_ADDR (263) 170 172
INET6_ADDR (264) 171
MSG_NAME (265) 173
MSG_IOV (266) 173
MSG_FLAGS (267) 173
MSG_CONTROL (268) 175
CMSG_LEVEL (269) 176
CMSG_TYPE (270) 176
CMSG_DATA (271) 176
FD (272) 181 182
EVENTS (273) 181 182 183 184 185
REVENTS (274) 187
ONOFF (275) 188
LINGER (276) 188
U32 (277) 184
U64 (278) 185
PTR (279) 183
ACK (280) 106
ECR (281) 127
EOL (282) 121
MSS (283) 122
NOP (284) 120
SACK (285) 125
SACKOK (286) 124
TIMESTAMP (287) 127
VAL (288) 127
WIN (289) 108
WSCALE (290) 123
URG (291) 110
MD5 (292) 126
FAST_OPEN (293) 128
FAST_OPEN_EXP (294) 129
TOS (295) 86
FLAGS (296) 49 50 196
FLOWLABEL (297) 96
ECT0 (298) 88
ECT1 (299) 89
CE (300) 91
ECT01 (301) 90
NO_ECN (302) 87
IPV4 (303) 14 43
IPV6 (304) 15 44
ICMP (305) 41
UDP (306) 40 74
RAW (307) 76
GRE (308) 45 46
MTU (309) 78
ID (310) 80
MPLS (311) 47
LABEL (312) 67
TC (313) 67
TTL (314) 67 99
OPTION (315) 8
SUM (316) 57
OFF (317) 58
KEY (318) 55 59
SEQ (319) 60
NONE (320) 53
CHECKSUM (321) 54
SEQUENCE (322) 56
PRESENT (323) 54 55 56
EE_ERRNO (324) 179
EE_CODE (325) 179
EE_DATA (326) 179
EE_INFO (327) 179
EE_ORIGIN (328) 179
EE_TYPE (329) 179
SCM_SEC (330) 177
SCM_NSEC (331) 177
FLOAT (332) 30
INTEGER (333) 9 31 40 67 74 76 78 80 82 99 104 106 108 110 119 122
    123 127 132 164 172 177 188
HEX_INTEGER (334) 86 96 165
WORD (335) 10 16 17 18 69 70 72 92 94 118 136 143 167 172 191 195 197
STRING (336) 11 17 144 145 170 171 172
BACK_QUOTED (337) 18 198
CODE (338) 199
IPV4_ADDR (339) 12 43
IPV6_ADDR (340) 13 44


Nonterminals, with rules where they appear

$accept (103)
    on left: 0
script (104)
    on left: 1, on right: 0
opt_options (105)
    on left: 2 3, on right: 1
options (106)
    on left: 4 5, on right: 3 5
option (107)
    on left: 6 7, on right: 4 5
option_flag (108)
    on left: 8, on right: 6 7
option_value (109)
    on left: 9 10 11 12 13 14 15 16 17 18, on right: 6
opt_init_command (110)
    on left: 19 20, on right: 1
init_command (111)
    on left: 21, on right: 20
events (112)
    on left: 22 23, on right: 1 23
event (113)
    on left: 24, on right: 22 23
event_time (114)
    on left: 25 26 27 28 29, on right: 24
time (115)
    on left: 30 31, on right: 25 26 28 29 135
action (116)
    on left: 32 33 34 35, on right: 24
packet_spec (117)
    on left: 36 37 38, on right: 32
tcp_packet_spec (118)
    on left: 39, on right: 36
udp_packet_spec (119)
    on left: 40, on right: 37
icmp_packet_spec (120)
    on left: 41, on right: 38
packet_prefix (121)
    on left: 42 43 44 45 46 47, on right: 39 40 41 43 44 45 46 47
gre_header_expression (122)
    on left: 48, on right: 46 160
gre_flags_list (123)
    on left: 49 50, on right: 48
gre_flags (124)
    on left: 51 52, on right: 49 52
gre_flag (125)
    on left: 53 54 55 56, on right: 51 52
gre_sum (126)
    on left: 57, on right: 48
gre_off (127)
    on left: 58, on right: 48
gre_key (128)
    on left: 59, on right: 48
gre_seq (129)
    on left: 60, on right: 48
opt_comma (130)
    on left: 61 62, on right: 46 48
opt_equals (131)
    on left: 63 64, on right: 59
mpls_stack (132)
    on left: 65 66, on right: 47 66 189
mpls_stack_entry (133)
    on left: 67, on right: 66
opt_mpls_stack_bottom (134)
    on left: 68 69, on right: 67
icmp_type (135)
    on left: 70, on right: 41
opt_icmp_code (136)
    on left: 71 72, on right: 41
opt_icmp_echoed (137)
    on left: 73 74 75 76, on right: 41
opt_icmp_mtu (138)
    on left: 77 78, on right: 41
opt_icmp_echo_id (139)
    on left: 79 80, on right: 41
opt_port_info (140)
    on left: 81 82, on right: 39 40
direction (141)
    on left: 83 84, on right: 42
tos_spec (142)
    on left: 85 86, on right: 97 100
ip_ecn (143)
    on left: 87 88 89 90 91, on right: 85
flags (144)
    on left: 92 93 94 95, on right: 39
flow_label (145)
    on left: 96, on right: 98 100
ip_info (146)
    on left: 97 98 99 100, on right: 102 103
opt_ip_info (147)
    on left: 101 102 103, on right: 39 40 41 43 44
seq (148)
    on left: 104, on right: 39 75
opt_ack (149)
    on left: 105 106, on right: 39
opt_window (150)
    on left: 107 108, on right: 39
opt_urg_ptr (151)
    on left: 109 110, on right: 39
opt_tcp_options (152)
    on left: 111 112 113, on right: 39
tcp_option_list (153)
    on left: 114 115, on right: 112 115
opt_tcp_fast_open_cookie (154)
    on left: 116 117, on right: 128 129
hex_blob (155)
    on left: 118 119, on right: 117 126
tcp_option (156)
    on left: 120 121 122 123 124 125 126 127 128 129, on right: 114
    115
sack_block_list (157)
    on left: 130 131, on right: 125 131
sack_block (158)
    on left: 132, on right: 130 131
syscall_spec (159)
    on left: 133, on right: 33
opt_end_time (160)
    on left: 134 135, on right: 133
function_name (161)
    on left: 136, on right: 133
function_arguments (162)
    on left: 137 138, on right: 133
expression_list (163)
    on left: 139 140, on right: 138 140 169 178
expression (164)
    on left: 141 142 143 144 145 146 147 148 149 150 151 152 153 154
    155 156 157 158 159 160 161, on right: 133 139 140 166 167 173
    176 179 181 182 183 184 185 187
any_int (165)
    on left: 162 163, on right: 50 57 58 59 60 142
decimal_integer (166)
    on left: 164, on right: 162 173 180
hex_integer (167)
    on left: 165, on right: 163
binary_expression (168)
    on left: 166 167, on right: 146
array (169)
    on left: 168 169, on right: 147 173 175
inaddr (170)
    on left: 170, on right: 148
in6addr (171)
    on left: 171, on right: 149
sockaddr (172)
    on left: 172, on right: 150
msghdr (173)
    on left: 173, on right: 151
opt_cmsg (174)
    on left: 174 175, on right: 173
cmsg_expr (175)
    on left: 176, on right: 156
scm_timestamping_expr (176)
    on left: 177, on right: 157
sub_expr_list (177)
    on left: 178, on right: 158
sock_extended_err_expr (178)
    on left: 179, on right: 159
iovec (179)
    on left: 180, on right: 152
pollfd (180)
    on left: 181, on right: 153
epollev (181)
    on left: 182 183 184 185, on right: 161
opt_revents (182)
    on left: 186 187, on right: 181
linger (183)
    on left: 188, on right: 154
mpls_stack_expression (184)
    on left: 189, on right: 155
opt_errno (185)
    on left: 190 191, on right: 133
opt_note (186)
    on left: 192 193, on right: 133
note (187)
    on left: 194, on right: 191 193
word_list (188)
    on left: 195 196 197, on right: 194 197
command_spec (189)
    on left: 198, on right: 21 34 202
code_spec (190)
    on left: 199, on right: 35
opt_cleanup_command (191)
    on left: 200 201, on right: 1
cleanup_command (192)
    on left: 202, on right: 201


State 0

    0 $accept: . script $end

    OPTION  shift, and go to state 1

    $default  reduce using rule 2 (opt_options)

    script       go to state 2
    opt_options  go to state 3
    options      go to state 4
    option       go to state 5
    option_flag  go to state 6


State 1

    8 option_flag: OPTION .

    $default  reduce using rule 8 (option_flag)


State 2

    0 $accept: script . $end

    $end  shift, and go to state 7


State 3

    1 script: opt_options . opt_init_command events opt_cleanup_command

    BACK_QUOTED  shift, and go to state 8

    $default  reduce using rule 19 (opt_init_command)

    opt_init_command  go to state 9
    init_command      go to state 10
    command_spec      go to state 11


State 4

    3 opt_options: options .
    5 options: options . option

    OPTION  shift, and go to state 1

    $default  reduce using rule 3 (opt_options)

    option       go to state 12
    option_flag  go to state 6


State 5

    4 options: option .

    $default  reduce using rule 4 (options)


State 6

    6 option: option_flag . '=' option_value
    7       | option_flag .

    '='  shift, and go to state 13

    $default  reduce using rule 7 (option)


State 7

    0 $accept: script $end .

    $default  accept


State 8

  198 command_spec: BACK_QUOTED .

    $default  reduce using rule 198 (command_spec)


State 9

    1 script: opt_options opt_init_command . events opt_cleanup_command

    FLOAT    shift, and go to state 14
    INTEGER  shift, and go to state 15
    '+'      shift, and go to state 16
    '*'      shift, and go to state 17

    events      go to state 18
    event       go to state 19
    event_time  go to state 20
    time        go to state 21


State 10

   20 opt_init_command: init_command .

    $default  reduce using rule 20 (opt_init_command)


State 11

   21 init_command: command_spec .

    $default  reduce using rule 21 (init_command)


State 12

    5 options: options option .

    $default  reduce using rule 5 (options)


State 13

    6 option: option_flag '=' . option_value

    IPV4       shift, and go to state 22
    IPV6       shift, and go to state 23
    INTEGER    shift, and go to state 24
    WORD       shift, and go to state 25
    STRING     shift, and go to state 26
    IPV4_ADDR  shift, and go to state 27
    IPV6_ADDR  shift, and go to state 28

    option_value  go to state 29


State 14

   30 time: FLOAT .

    $default  reduce using rule 30 (time)


State 15

   31 time: INTEGER .

    $default  reduce using rule 31 (time)


State 16

   25 event_time: '+' . time
   29           | '+' . time '~' '+' time

    FLOAT    shift, and go to state 14
    INTEGER  shift, and go to state 15

    time  go to state 30


State 17

   27 event_time: '*' .

    $default  reduce using rule 27 (event_time)


State 18

    1 script: opt_options opt_init_command events . opt_cleanup_command
   23 events: events . event

    FLOAT        shift, and go to state 14
    INTEGER      shift, and go to state 15
    BACK_QUOTED  shift, and go to state 8
    '+'          shift, and go to state 16
    '*'          shift, and go to state 17

    $default  reduce using rule 200 (opt_cleanup_command)

    event                go to state 31
    event_time           go to state 20
    time                 go to state 21
    command_spec         go to state 32
    opt_cleanup_command  go to state 33
    cleanup_command      go to state 34


State 19

   22 events: event .

    $default  reduce using rule 22 (events)


State 20

   24 event: event_time . action

    ELLIPSIS     shift, and go to state 35
    BACK_QUOTED  shift, and go to state 8
    CODE         shift, and go to state 36
    '>'          shift, and go to state 37
    '<'          shift, and go to state 38

    $default  reduce using rule 134 (opt_end_time)

    action            go to state 39
    packet_spec       go to state 40
    tcp_packet_spec   go to state 41
    udp_packet_spec   go to state 42
    icmp_packet_spec  go to state 43
    packet_prefix     go to state 44
    direction         go to state 45
    syscall_spec      go to state 46
    opt_end_time      go to state 47
    command_spec      go to state 48
    code_spec         go to state 49


State 21

   26 event_time: time .
   28           | time . '~' time

    '~'  shift, and go to state 50

    $default  reduce using rule 26 (event_time)


State 22

   14 option_value: IPV4 .

    $default  reduce using rule 14 (option_value)


State 23

   15 option_value: IPV6 .

    $default  reduce using rule 15 (option_value)


State 24

    9 option_value: INTEGER .

    $default  reduce using rule 9 (option_value)


State 25

   10 option_value: WORD .
   16             | WORD . '=' WORD
   17             | WORD . '=' STRING
   18             | WORD . '=' BACK_QUOTED

    '='  shift, and go to state 51

    $default  reduce using rule 10 (option_value)


State 26

   11 option_value: STRING .

    $default  reduce using rule 11 (option_value)


State 27

   12 option_value: IPV4_ADDR .

    $default  reduce using rule 12 (option_value)


State 28

   13 option_value: IPV6_ADDR .

    $default  reduce using rule 13 (option_value)


State 29

    6 option: option_flag '=' option_value .

    $default  reduce using rule 6 (option)


State 30

   25 event_time: '+' time .
   29           | '+' time . '~' '+' time

    '~'  shift, and go to state 52

    $default  reduce using rule 25 (event_time)


State 31

   23 events: events event .

    $default  reduce using rule 23 (events)


State 32

  202 cleanup_command: command_spec .

    $default  reduce using rule 202 (cleanup_command)


State 33

    1 script: opt_options opt_init_command events opt_cleanup_command .

    $default  reduce using rule 1 (script)


State 34

  201 opt_cleanup_command: cleanup_command .

    $default  reduce using rule 201 (opt_cleanup_command)


State 35

  135 opt_end_time: ELLIPSIS . time

    FLOAT    shift, and go to state 14
    INTEGER  shift, and go to state 15

    time  go to state 53


State 36

  199 code_spec: CODE .

    $default  reduce using rule 199 (code_spec)


State 37

   84 direction: '>' .

    $default  reduce using rule 84 (direction)


State 38

   83 direction: '<' .

    $default  reduce using rule 83 (direction)


State 39

   24 event: event_time action .

    $default  reduce using rule 24 (event)


State 40

   32 action: packet_spec .

    $default  reduce using rule 32 (action)


State 41

   36 packet_spec: tcp_packet_spec .

    $default  reduce using rule 36 (packet_spec)


State 42

   37 packet_spec: udp_packet_spec .

    $default  reduce using rule 37 (packet_spec)


State 43

   38 packet_spec: icmp_packet_spec .

    $default  reduce using rule 38 (packet_spec)


State 44

   39 tcp_packet_spec: packet_prefix . opt_ip_info opt_port_info flags seq opt_ack opt_window opt_urg_ptr opt_tcp_options
   40 udp_packet_spec: packet_prefix . opt_ip_info UDP opt_port_info '(' INTEGER ')'
   41 icmp_packet_spec: packet_prefix . opt_ip_info ICMP icmp_type opt_icmp_code opt_icmp_mtu opt_icmp_echo_id opt_icmp_echoed
   43 packet_prefix: packet_prefix . IPV4 opt_ip_info IPV4_ADDR '>' IPV4_ADDR ':'
   44              | packet_prefix . IPV6 opt_ip_info IPV6_ADDR '>' IPV6_ADDR ':'
   45              | packet_prefix . GRE ':'
   46              | packet_prefix . GRE opt_comma gre_header_expression ':'
   47              | packet_prefix . MPLS mpls_stack ':'

    IPV4  shift, and go to state 54
    IPV6  shift, and go to state 55
    GRE   shift, and go to state 56
    MPLS  shift, and go to state 57
    '('   shift, and go to state 58
    '['   shift, and go to state 59

    $default  reduce using rule 101 (opt_ip_info)

    opt_ip_info  go to state 60


State 45

   42 packet_prefix: direction .

    $default  reduce using rule 42 (packet_prefix)


State 46

   33 action: syscall_spec .

    $default  reduce using rule 33 (action)


State 47

  133 syscall_spec: opt_end_time . function_name function_arguments '=' expression opt_errno opt_note

    WORD  shift, and go to state 61

    function_name  go to state 62


State 48

   34 action: command_spec .

    $default  reduce using rule 34 (action)


State 49

   35 action: code_spec .

    $default  reduce using rule 35 (action)


State 50

   28 event_time: time '~' . time

    FLOAT    shift, and go to state 14
    INTEGER  shift, and go to state 15

    time  go to state 63


State 51

   16 option_value: WORD '=' . WORD
   17             | WORD '=' . STRING
   18             | WORD '=' . BACK_QUOTED

    WORD         shift, and go to state 64
    STRING       shift, and go to state 65
    BACK_QUOTED  shift, and go to state 66


State 52

   29 event_time: '+' time '~' . '+' time

    '+'  shift, and go to state 67


State 53

  135 opt_end_time: ELLIPSIS time .

    $default  reduce using rule 135 (opt_end_time)


State 54

   43 packet_prefix: packet_prefix IPV4 . opt_ip_info IPV4_ADDR '>' IPV4_ADDR ':'

    '('  shift, and go to state 58
    '['  shift, and go to state 59

    $default  reduce using rule 101 (opt_ip_info)

    opt_ip_info  go to state 68


State 55

   44 packet_prefix: packet_prefix IPV6 . opt_ip_info IPV6_ADDR '>' IPV6_ADDR ':'

    '('  shift, and go to state 58
    '['  shift, and go to state 59

    $default  reduce using rule 101 (opt_ip_info)

    opt_ip_info  go to state 69


State 56

   45 packet_prefix: packet_prefix GRE . ':'
   46              | packet_prefix GRE . opt_comma gre_header_expression ':'

    ':'  shift, and go to state 70
    ','  shift, and go to state 71

    $default  reduce using rule 61 (opt_comma)

    opt_comma  go to state 72


State 57

   47 packet_prefix: packet_prefix MPLS . mpls_stack ':'

    $default  reduce using rule 65 (mpls_stack)

    mpls_stack  go to state 73


State 58

  102 opt_ip_info: '(' . ip_info ')'

    TOS        shift, and go to state 74
    FLOWLABEL  shift, and go to state 75
    ECT0       shift, and go to state 76
    ECT1       shift, and go to state 77
    CE         shift, and go to state 78
    ECT01      shift, and go to state 79
    NO_ECN     shift, and go to state 80
    TTL        shift, and go to state 81

    tos_spec    go to state 82
    ip_ecn      go to state 83
    flow_label  go to state 84
    ip_info     go to state 85


State 59

  103 opt_ip_info: '[' . ip_info ']'

    TOS        shift, and go to state 74
    FLOWLABEL  shift, and go to state 75
    ECT0       shift, and go to state 76
    ECT1       shift, and go to state 77
    CE         shift, and go to state 78
    ECT01      shift, and go to state 79
    NO_ECN     shift, and go to state 80
    TTL        shift, and go to state 81

    tos_spec    go to state 82
    ip_ecn      go to state 83
    flow_label  go to state 84
    ip_info     go to state 86


State 60

   39 tcp_packet_spec: packet_prefix opt_ip_info . opt_port_info flags seq opt_ack opt_window opt_urg_ptr opt_tcp_options
   40 udp_packet_spec: packet_prefix opt_ip_info . UDP opt_port_info '(' INTEGER ')'
   41 icmp_packet_spec: packet_prefix opt_ip_info . ICMP icmp_type opt_icmp_code opt_icmp_mtu opt_icmp_echo_id opt_icmp_echoed

    ICMP     shift, and go to state 87
    UDP      shift, and go to state 88
    INTEGER  shift, and go to state 89

    $default  reduce using rule 81 (opt_port_info)

    opt_port_info  go to state 90


State 61

  136 function_name: WORD .

    $default  reduce using rule 136 (function_name)


State 62

  133 syscall_spec: opt_end_time function_name . function_arguments '=' expression opt_errno opt_note

    '('  shift, and go to state 91

    function_arguments  go to state 92


State 63

   28 event_time: time '~' time .

    $default  reduce using rule 28 (event_time)


State 64

   16 option_value: WORD '=' WORD .

    $default  reduce using rule 16 (option_value)


State 65

   17 option_value: WORD '=' STRING .

    $default  reduce using rule 17 (option_value)


State 66

   18 option_value: WORD '=' BACK_QUOTED .

    $default  reduce using rule 18 (option_value)


State 67

   29 event_time: '+' time '~' '+' . time

    FLOAT    shift, and go to state 14
    INTEGER  shift, and go to state 15

    time  go to state 93


State 68

   43 packet_prefix: packet_prefix IPV4 opt_ip_info . IPV4_ADDR '>' IPV4_ADDR ':'

    IPV4_ADDR  shift, and go to state 94


State 69

   44 packet_prefix: packet_prefix IPV6 opt_ip_info . IPV6_ADDR '>' IPV6_ADDR ':'

    IPV6_ADDR  shift, and go to state 95


State 70

   45 packet_prefix: packet_prefix GRE ':' .

    $default  reduce using rule 45 (packet_prefix)


State 71

   62 opt_comma: ',' .

    $default  reduce using rule 62 (opt_comma)


State 72

   46 packet_prefix: packet_prefix GRE opt_comma . gre_header_expression ':'

    FLAGS  shift, and go to state 96

    gre_header_expression  go to state 97
    gre_flags_list         go to state 98


State 73

   47 packet_prefix: packet_prefix MPLS mpls_stack . ':'
   66 mpls_stack: mpls_stack . mpls_stack_entry

    '('  shift, and go to state 99
    ':'  shift, and go to state 100

    mpls_stack_entry  go to state 101


State 74

   86 tos_spec: TOS . HEX_INTEGER

    HEX_INTEGER  shift, and go to state 102


State 75

   96 flow_label: FLOWLABEL . HEX_INTEGER

    HEX_INTEGER  shift, and go to state 103


State 76

   88 ip_ecn: ECT0 .

    $default  reduce using rule 88 (ip_ecn)


State 77

   89 ip_ecn: ECT1 .

    $default  reduce using rule 89 (ip_ecn)


State 78

   91 ip_ecn: CE .

    $default  reduce using rule 91 (ip_ecn)


State 79

   90 ip_ecn: ECT01 .

    $default  reduce using rule 90 (ip_ecn)


State 80

   87 ip_ecn: NO_ECN .

    $default  reduce using rule 87 (ip_ecn)


State 81

   99 ip_info: TTL . INTEGER

    INTEGER  shift, and go to state 104


State 82

   97 ip_info: tos_spec .
  100        | tos_spec . ',' flow_label

    ','  shift, and go to state 105

    $default  reduce using rule 97 (ip_info)


State 83

   85 tos_spec: ip_ecn .

    $default  reduce using rule 85 (tos_spec)


State 84

   98 ip_info: flow_label .

    $default  reduce using rule 98 (ip_info)


State 85

  102 opt_ip_info: '(' ip_info . ')'

    ')'  shift, and go to state 106


State 86

  103 opt_ip_info: '[' ip_info . ']'

    ']'  shift, and go to state 107


State 87

   41 icmp_packet_spec: packet_prefix opt_ip_info ICMP . icmp_type opt_icmp_code opt_icmp_mtu opt_icmp_echo_id opt_icmp_echoed

    WORD  shift, and go to state 108

    icmp_type  go to state 109


State 88

   40 udp_packet_spec: packet_prefix opt_ip_info UDP . opt_port_info '(' INTEGER ')'

    INTEGER  shift, and go to state 89

    $default  reduce using rule 81 (opt_port_info)

    opt_port_info  go to state 110


State 89

   82 opt_port_info: INTEGER . '>' INTEGER

    '>'  shift, and go to state 111


State 90

   39 tcp_packet_spec: packet_prefix opt_ip_info opt_port_info . flags seq opt_ack opt_window opt_urg_ptr opt_tcp_options

    WORD  shift, and go to state 112
    '.'   shift, and go to state 113
    '-'   shift, and go to state 114

    flags  go to state 115


State 91

  137 function_arguments: '(' . ')'
  138                   | '(' . expression_list ')'

    ELLIPSIS     shift, and go to state 116
    INET_ADDR    shift, and go to state 117
    INET6_ADDR   shift, and go to state 118
    INTEGER      shift, and go to state 119
    HEX_INTEGER  shift, and go to state 120
    WORD         shift, and go to state 121
    STRING       shift, and go to state 122
    ')'          shift, and go to state 123
    '['          shift, and go to state 124
    '{'          shift, and go to state 125

    expression_list         go to state 126
    expression              go to state 127
    any_int                 go to state 128
    decimal_integer         go to state 129
    hex_integer             go to state 130
    binary_expression       go to state 131
    array                   go to state 132
    inaddr                  go to state 133
    in6addr                 go to state 134
    sockaddr                go to state 135
    msghdr                  go to state 136
    cmsg_expr               go to state 137
    scm_timestamping_expr   go to state 138
    sub_expr_list           go to state 139
    sock_extended_err_expr  go to state 140
    iovec                   go to state 141
    pollfd                  go to state 142
    epollev                 go to state 143
    linger                  go to state 144
    mpls_stack_expression   go to state 145


State 92

  133 syscall_spec: opt_end_time function_name function_arguments . '=' expression opt_errno opt_note

    '='  shift, and go to state 146


State 93

   29 event_time: '+' time '~' '+' time .

    $default  reduce using rule 29 (event_time)


State 94
